--- a/Feature Selection.ipynb
+++ b/Feature Selection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
     "import seaborn as sns\n",
     "\n",
     "\n",
-    "from sklearn.cross_validation import train_test_split\n",
+    "from sklearn.model_selection import train_test_split\n",
     "from sklearn.datasets import load_breast_cancer\n",
     "from sklearn.feature_selection import mutual_info_classif\n",
     "from sklearn.linear_model import LogisticRegression\n",
@@ -26,21 +26,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "california_house_data = load_breast_cancer()"
+    "dataset = load_breast_cancer()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X = california_house_data['data']\n",
-    "y = california_house_data['target']"
+    "X = dataset['data']\n",
+    "y = dataset['target']"
    ]
   },
   {
